<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/coordinator"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">


  <com.google.android.material.imageview.ShapeableImageView
    android:id="@+id/main_image"
    android:layout_width="50dp"
    android:layout_height="50dp"
    android:layout_margin="16dp"
    android:src="@drawable/ic_launcher_main"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintVertical_bias="0.15"
    app:shapeAppearance="@style/AppTheme.ShapeAppearance.MainFragment.Logo" />

  <TextView
    android:id="@+id/getStarted"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginStart="4dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="4dp"
    android:layout_marginBottom="4dp"
    android:text="@string/get_started"
    android:textAppearance="@style/TextAppearance.Material3.TitleMedium"
    android:textStyle="bold"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/main_image" />

  <TextView
    android:id="@+id/greetingText"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginBottom="16dp"
    android:text="@string/msg_create_new_project_greeting"
    android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@id/getStarted" />

  <androidx.recyclerview.widget.RecyclerView
    android:id="@+id/actions"
    android:layout_width="0dp"
    android:layout_height="0dp"
    android:layout_marginTop="16dp"
    android:layout_marginBottom="16dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="@id/greetingText"
    app:layout_constraintStart_toStartOf="@id/greetingText"
    app:layout_constraintTop_toBottomOf="@id/greetingText"
    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
    tools:listitem="@layout/layout_main_action_item" />

</androidx.constraintlayout.widget.ConstraintLayout>
