<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_margin="8dp"
  android:background="?attr/selectableItemBackground"
  android:clickable="true"
  android:descendantFocusability="blocksDescendants"
  android:elevation="2dp"
  android:focusable="true"
  app:strokeWidth="0dp">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="8dp"
    android:paddingTop="8dp"
    android:paddingEnd="8dp"
    android:paddingBottom="8dp">

    <com.google.android.material.imageview.ShapeableImageView
      android:id="@+id/template_icon"
      android:layout_width="100dp"
      android:layout_height="140dp"
      android:adjustViewBounds="true"
      android:scaleType="center"
      app:shapeAppearance="@style/AppTheme.ShapeOverlay.TemplateImage"
      tools:src="@drawable/template_basic_activity" />

    <TextView
      android:id="@+id/template_name"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="8dp"
      android:gravity="center"
      android:maxLines="2"
      android:textAppearance="@style/TextAppearance.Material3.BodyMedium"
      tools:text="Empty Activity" />

  </LinearLayout>

</com.google.android.material.card.MaterialCardView>